# node-legion

./: 0_hello_world.cu  1_multiple.cu  2_ghost_gpu.cu  3_stencil.cu  3_stencil_indexspace.cu  4_stencil.cu  5_3dstencil.cu  CMakeLists.txt  README.md  bench_solve.cpp  custom_mapper.cpp  node_aware_mapper.cpp  node_aware_mapper.hpp  node_aware_mapper2.hpp  node_aware_must_epoch_mapper.hpp  print_machine.cpp  solve.cpp  solve.hpp  tut_ghost.cpp  tut_hello_world.cpp  tut_multiple.cpp
z3_experiments/: Makefile  main.cpp  qap.cpp
